# mpc-primitives

crislib/libscapi/: .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  makefile  makefile_libs
crislib/libscapi/build_scripts/: INSTALL.MD  LICENSE.MD
crislib/libscapi/dockerfiles/: Dockerfile  DockerfileLibs  PrerequisitesDockerfie
crislib/libscapi/docs/: Makefile  make.bat  requirements.txt
crislib/libscapi/docs/source/: conf.py
crislib/libscapi/include/circuits/: ArithmeticCircuit.hpp  BooleanCircuits.hpp  Compat.h  Config.h  FastGarbledBooleanCircuit.hpp  FourToTwoGarbledBoleanCircuitNoAssumptions.h  FreeXorGarbledBooleanCircuit.h  GarbledBooleanCircuit.h  GarbledBooleanCircuitFixedKey.h  GarbledBooleanCircuitNoFixedKey.h  GarbledBooleanCircuitNoIntrinsics.h  GarbledCircuitFactory.hpp  GarbledGate.h  HalfGatesGarbledBoleanCircuitNoFixedKey.h  HalfGatesGarbledBooleanCircuit.h  RowReductionGarbledBooleanCircuit.h  StandardGarbledBooleanCircuit.h  TedKrovetzAesNiWrapperC.h  stdafx.h  targetver.h
crislib/libscapi/include/comm/: Comm.hpp  CommBF.hpp  MPCCommunication.hpp
crislib/libscapi/include/configFiles/: NISTEC.txt
crislib/libscapi/include/cryptoInfra/: PlainText.hpp  Protocol.hpp
crislib/libscapi/include/infra/: CircuitConverter.hpp  Common.hpp  MathAlgorithms.hpp  Measurement.hpp
crislib/libscapi/lib/libOTe/frontend/: CMakeLists.txt
crislib/libscapi/samples/: examples_main.cpp  examples_main.hpp  makefile
crislib/libscapi/test/: interactiveMidProtocolsTests.cpp  makefile  testCircuit.txt  tests.cpp
(+424 files in other folders)
